--- a/html/test.html
+++ b/html/test.html
@@ -8,6 +8,7 @@
 <script>
 	$(document).ready( function() {
 		$('.filebrowser').cvcommander({button_text:'Browse'});
+		//$('#dztest').dropzone({url:'/foo'});
 	});
 </script>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -18,5 +19,6 @@
 <form>
 <input type="text" class="filebrowser">
 </form>
+<!--div id="dztest" style="width:500px;height:300px;border: 3px dashed #ccc;"><span>Drag and drop files or click to upload</span></div-->
 </body>
 </html>
