fixes missing dropzone css include

--- a/html/test.html
+++ b/html/test.html
@@ -10,10 +10,13 @@
 		$('.filebrowser').cvcommander({button_text:'Browse'});
 		//$('#dztest').dropzone({url:'/foo'});
 	});
+
+	Dropzone.autoDiscover = false;
 </script>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/4.3.0/min/dropzone.min.css">
+<link rel="stylesheet" type="text/css" href="/static/css/cvccommander.css">
 </head>
 <body>
 <form>
