--- a/html/cvcommander.html
+++ b/html/cvcommander.html
@@ -8,6 +8,9 @@
 	<div class="tab-pane active" id="cvclistview">
 	</div>
 	<div class="tab-pane" id="cvcupload">
+		<div id="cvcuploaddz" class="dropzone">
+		<div class="dz-message cvcdzinstructions" data-dz-message><span>Drag and drop files or click to upload</span></div>
+		</div>
 	</div>
 	</div>
 </div>
