reload the list after successful upload

--- a/html/cvcommander.html
+++ b/html/cvcommander.html
@@ -1,6 +1,6 @@
 <div id="cvc-container" class="container">
 	<ul class="nav nav-tabs">
-		<li class="active" role="presentation"><a data-toggle="tab" href="#cvclistview">Browse</a></li>
+		<li class="active" role="presentation"><a id="browsetab" data-toggle="tab" href="#cvclistview">Browse</a></li>
 		<li role="presentation"><a data-toggle="tab" href="#cvcupload">Upload</a></li>
 		<li class="pull-right" role="presentation"><a data-toggle="tab" class="cvcclose" href="#cvcclose">Close</a></li>
 	</ul>
