actual work on this

--- a/html/cvcommander.html
+++ b/html/cvcommander.html
@@ -7,7 +7,11 @@
 	<div class="tab-content">
 	<div class="tab-pane active" id="cvclistview">
 	</div>
-	<div class="tab-pane" id="cvcupload">
+	<div class="tab-pane text-muted center" id="cvcupload">
+		<span id="cvcdropmessage">Drop files to upload</span>
+		<div class="progress" id="cvcprogress" style="display:none">
+			<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:0%"></div>
+		</div>
 	</div>
 	</div>
 </div>
