--- a/html/cvcommander.html
+++ b/html/cvcommander.html
@@ -1,17 +1,28 @@
-<div id="cvc-container" class="container">
-	<ul class="nav nav-tabs">
-		<li class="active" role="presentation"><a id="browsetab" data-toggle="tab" href="#cvclistview">Browse</a></li>
-		<li role="presentation"><a data-toggle="tab" href="#cvcupload">Upload</a></li>
-		<li class="pull-right" role="presentation"><a data-toggle="tab" class="cvcclose" href="#cvcclose">Close</a></li>
-	</ul>
-	<div class="tab-content">
-	<div class="tab-pane active" id="cvclistview">
-	</div>
-	<div class="tab-pane text-muted center" id="cvcupload">
-		<span id="cvcdropmessage">Drop files to upload</span>
-		<div class="progress" id="cvcprogress" style="display:none">
-			<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:0%"></div>
+<div id="cvc-container" class="modal fade" id="cvcommander">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="fa fa-close"></i></button>
+				<h4 class="modal-title">Manage Files</h4>
+			</div>
+			<div class="modal-body">
+				<ul class="nav nav-tabs">
+					 <li class="active" role="presentation"><a id="browsetab" data-toggle="tab" href="#cvclistview">Browse</a></li>
+					 <li role="presentation"><a data-toggle="tab" href="#cvcupload">Upload</a></li>
+				</ul>
+				<div class="tab-content">
+					 <div class="tab-pane active" id="cvclistview">
+						 <div id="cvclist-toolbar"></div>
+						 <div id="cvclistcontent"></div>
+					 </div>
+					 <div class="tab-pane text-muted center" id="cvcupload">
+						   <span id="cvcdropmessage">Drop files to upload</span>
+						   <div class="progress" id="cvcprogress" style="display:none">
+								 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:0%"></div>
+						   </div>
+					 </div>
+				</div>
+			</div>
 		</div>
-	</div>
 	</div>
 </div>
