--- a/html/test.html
+++ b/html/test.html
@@ -15,9 +15,15 @@
 <link rel="stylesheet" type="text/css" href="/static/css/cvccommander.css">
 </head>
 <body>
-<form>
-<input type="text" class="filebrowser">
-</form>
-<!--div id="dztest" style="width:500px;height:300px;border: 3px dashed #ccc;"><span>Drag and drop files or click to upload</span></div-->
+<div class="container">
+    <div class="col-md-6">
+    <form>
+        <div class="form-group">
+            <label>Upload a File</label>
+            <input type="text" class="filebrowser form-control">
+        </div>
+    </form>
+    </div>
+</div>
 </body>
 </html>
