--- a/html/cvcommander.html
+++ b/html/cvcommander.html
@@ -3,24 +3,30 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="fa fa-close"></i></button>
-				<h4 class="modal-title">Manage Files</h4>
+				<ul class="nav nav-tabs">
+					<li class="active" role="presentation"><a id="browsetab" data-toggle="tab" href="#cvclistview"><i class="fa fa-folder-open-o"></i> Browse</a></li>
+					<li role="presentation"><a data-toggle="tab" href="#cvcupload"><i class="fa fa-cloud-upload"></i> Upload</a></li>
+				</ul>
 			</div>
 			<div class="modal-body">
-				<ul class="nav nav-tabs">
-					 <li class="active" role="presentation"><a id="browsetab" data-toggle="tab" href="#cvclistview">Browse</a></li>
-					 <li role="presentation"><a data-toggle="tab" href="#cvcupload">Upload</a></li>
-				</ul>
 				<div class="tab-content">
 					 <div class="tab-pane active" id="cvclistview">
-						 <div id="cvclist-toolbar"></div>
+						 <div id="cvclist-toolbar">
+							 <div class="btn-group">
+								 <a href="#" alt="Icon view" data-view-type="icons" class="cvview btn btn-sm btn-default"><i class="fa fa-th-large"></i></a>
+								 <a href="#" alt="List view" data-view-type="list" class="cvview btn btn-sm btn-default"><i class="fa fa-list"></i></a>
+							 </div>
+						 </div>
 						 <div id="cvclistcontent"></div>
 					 </div>
-					 <div class="tab-pane text-muted center" id="cvcupload">
-						   <span id="cvcdropmessage">Drop files to upload</span>
+					 <label class="tab-pane text-muted center" id="cvcupload">
+						 <span id="cvcdropmessage">Drop files to upload</span>
+						 	<input id="cvcuploadinput" type="file" style="display:none">
 						   <div class="progress" id="cvcprogress" style="display:none">
-								 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:0%"></div>
+								 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
+									  aria-valuemin="0" aria-valuemax="100" style="width:0%"></div>
 						   </div>
-					 </div>
+					 </label>
 				</div>
 			</div>
 		</div>
