--- a/html/test.html
+++ b/html/test.html
@@ -3,6 +3,7 @@
 <head><title>Test</title>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="/static/js/cvcommander.js"></script>
 <script>
 	$(document).ready( function() {
@@ -13,6 +14,51 @@
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="/static/css/cvccommander.css">
+    <style>
+        #cvc-container .modal-header {
+            background-color: #666666;
+            color: white;
+            padding-bottom: 0px;
+            border-bottom: 0px;
+        }
+
+        #cvc-container .modal-header>.nav-tabs {
+            border-bottom: 0px;
+        }
+
+        #cvc-container .nav-tabs li:not(.active) a {
+            background-color: #aaaaaa;
+            color: black;
+        }
+
+        #cvc-container {
+            min-height: 50%;
+            max-height: 50%;
+            height: 50%;
+        }
+
+        #cvc-container .modal-content {
+            height: 100%;
+        }
+
+        #cvc-container .tab-content {
+            overflow-y: auto;
+        }
+
+        #cvclist-toolbar {
+            padding-bottom: 1px;
+        }
+
+        #cvclistcontent {
+            padding: 2px;
+            border: 1px solid #aaaaaa;
+        }
+
+        #cvc-container .modal-dialog .modal-body {
+            padding-top: 0px;
+        }
+
+    </style>
 </head>
 <body>
 <div class="container">
