--- a/html/cvcommander.html
+++ b/html/cvcommander.html
@@ -13,11 +13,11 @@
 					 <div class="tab-pane active" id="cvclistview">
 						 <div id="cvclist-toolbar">
 							 <div class="btn-group">
-								 <a href="#" alt="Icon view" data-view-type="icons" class="cvview btn btn-sm btn-default"><i class="fa fa-th-large"></i></a>
-								 <a href="#" alt="List view" data-view-type="list" class="cvview btn btn-sm btn-default"><i class="fa fa-list"></i></a>
+								 <a href="#" name="Icon View" alt="Icon view" data-view-type="icons" class="cvview btn btn-sm btn-default"><i class="fas fa-th-large"></i></a>
+								 <a href="#" name="List View" alt="List view" data-view-type="list" class="cvview btn btn-sm btn-default"><i class="fas fa-th-list"></i></a>
 							 </div>
 						 </div>
-						 <div id="cvclistcontent"></div>
+						 <div id="cvclistcontent" class="container"></div>
 					 </div>
 					 <label class="tab-pane text-muted center" id="cvcupload">
 						 <span id="cvcdropmessage">Drop files to upload</span>
