--- a/html/test.html
+++ b/html/test.html
@@ -1,75 +1,88 @@
 <!doctype html>
 <html>
-<head><title>Test</title>
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-<script src="/static/js/cvcommander.js"></script>
-<script>
-	$(document).ready( function() {
-		$('.filebrowser').cvcommander({button_text:'Browse'});
-	});
+    <head>
+        <title>Test</title>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+                integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+                crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+                integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+                crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <script src="https://kit.fontawesome.com/ea05a33c54.js" crossorigin="anonymous"></script>
+        <script src="/static/js/cvcommander.js"></script>
+        <script>
+            $(document).ready( function() {
+                $('.filebrowser').cvcommander({button_text:'Browse'});
+            });
 
-</script>
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="/static/css/cvccommander.css">
-    <style>
-        #cvc-container .modal-header {
-            background-color: #666666;
-            color: white;
-            padding-bottom: 0px;
-            border-bottom: 0px;
-        }
+        </script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+              integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+              crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="/static/css/cvccommander.css">
+        <style>
+            #cvc-container .modal-header {
+                background-color: #666666;
+                color: white;
+                padding-bottom: 0px;
+                border-bottom: 0px;
+            }
 
-        #cvc-container .modal-header>.nav-tabs {
-            border-bottom: 0px;
-        }
+            #cvc-container .modal-header>.nav-tabs {
+                border-bottom: 0px;
+            }
 
-        #cvc-container .nav-tabs li:not(.active) a {
-            background-color: #aaaaaa;
-            color: black;
-        }
+            #cvc-container .nav-tabs li:not(.active) a {
+                background-color: #aaaaaa;
+                color: black;
+            }
 
-        #cvc-container {
-            min-height: 50%;
-            max-height: 50%;
-            height: 50%;
-        }
+            #cvc-container {
+                min-height: 50%;
+                max-height: 50%;
+                height: 50%;
+            }
 
-        #cvc-container .modal-content {
-            height: 100%;
-        }
+            #cvc-container .modal-content {
+                height: 100%;
+            }
 
-        #cvc-container .tab-content {
-            overflow-y: auto;
-        }
+            #cvclist-toolbar {
+                padding-bottom: 1px;
+            }
 
-        #cvclist-toolbar {
-            padding-bottom: 1px;
-        }
+            #cvclistcontent {
+                padding: 2px;
+                border: 1px solid #aaaaaa;
+            }
 
-        #cvclistcontent {
-            padding: 2px;
-            border: 1px solid #aaaaaa;
-        }
+            #cvclistcontent .row {
+                padding: .5rem;
+            }
 
-        #cvc-container .modal-dialog .modal-body {
-            padding-top: 0px;
-        }
+            #cvc-container .modal-dialog .modal-body {
+                padding-top: 0px;
+            }
 
-    </style>
-</head>
-<body>
-<div class="container">
-    <div class="col-md-6">
-    <form>
-        <div class="form-group">
-            <label>Upload a File</label>
-            <input type="text" class="filebrowser form-control">
+            body {
+                min-height: 100%;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <div class="col-md-6">
+            <form>
+                <div class="form-group">
+                    <label>Upload a File</label>
+                    <input type="text" class="filebrowser form-control">
+                </div>
+            </form>
+            </div>
         </div>
-    </form>
-    </div>
-</div>
-</body>
+    </body>
 </html>
