select item works. Drop and select a work in progress

--- a/html/test.html
+++ b/html/test.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Test</title>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-                crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+                integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
                 integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
                 crossorigin="anonymous"></script>
@@ -25,48 +24,6 @@
               crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="/static/css/cvccommander.css">
         <style>
-            #cvc-container .modal-header {
-                background-color: #666666;
-                color: white;
-                padding-bottom: 0px;
-                border-bottom: 0px;
-            }
-
-            #cvc-container .modal-header>.nav-tabs {
-                border-bottom: 0px;
-            }
-
-            #cvc-container .nav-tabs li:not(.active) a {
-                background-color: #aaaaaa;
-                color: black;
-            }
-
-            #cvc-container {
-                min-height: 50%;
-                max-height: 50%;
-                height: 50%;
-            }
-
-            #cvc-container .modal-content {
-                height: 100%;
-            }
-
-            #cvclist-toolbar {
-                padding-bottom: 1px;
-            }
-
-            #cvclistcontent {
-                padding: 2px;
-                border: 1px solid #aaaaaa;
-            }
-
-            #cvclistcontent .row {
-                padding: .5rem;
-            }
-
-            #cvc-container .modal-dialog .modal-body {
-                padding-top: 0px;
-            }
 
             body {
                 min-height: 100%;
