--- a/html/test.html
+++ b/html/test.html
@@ -14,7 +14,7 @@
         <script src="https://kit.fontawesome.com/ea05a33c54.js" crossorigin="anonymous"></script>
         <script src="/static/js/cvcommander.js"></script>
         <script>
-            $(document).ready( function() {
+            $(function() {
                 $('.filebrowser').cvcommander({button_text:'Browse'});
             });
 
