--- a/html/test.html
+++ b/html/test.html
@@ -52,6 +52,11 @@
                     <label>Upload a File</label>
                     <input type="text" class="filebrowser form-control">
                 </div>
+
+                <div class="form-group">
+                    <label>Upload 2!</label>
+                    <input type="text" class="filebrowser form-control">
+                </div>
             </form>
             </div>
         </div>
