--- a/html/test.html
+++ b/html/test.html
@@ -36,7 +36,7 @@
               integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
               crossorigin="anonymous">
         {% endif %}
-        <link rel="stylesheet" type="text/css" href="/static/css/cvccommander.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/cvcommander.css">
         <style>
 
             body {
